// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component should have a footer 1`] = `
<div>
  <div
    class="cardWrapper"
  >
    <div
      class="cardFooter"
    >
      view
    </div>
  </div>
</div>
`;

exports[`Card Component should match snapshot 1`] = `
<div>
  <div
    class="cardWrapper"
  >
    <div
      class="cardHeader"
    >
      <h3>
        Hello World
      </h3>
    </div>
    <div
      class="cardBody"
    >
      <img
        alt=""
        src="images/card-photo-example-1.jpg"
      />
    </div>
    <div
      class="cardFooter"
    >
      read more
    </div>
  </div>
</div>
`;
